styles: fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
   height: 100%;
 
   form {
-    height: 100%;
     width: 100%;
   }
 }
